Fix Issue with 1px spacing in triptych

--- a/source/assets/stylesheets/modules/_triptych.scss
+++ b/source/assets/stylesheets/modules/_triptych.scss
@@ -1,11 +1,12 @@
 .triptych img {
   float: left;
   width: 100%;
+  margin-right: -1px;
   &:first-child, &:last-child {
     display: none;
   }
   @include media ($medium-screen) {
-    width: 33.3333333333333333333333333333333333333333333%;
+    width: 33.4%;
     display: block !important;
   }
 }
